--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -7,7 +7,7 @@ body{
 }
 button-primary{
     border-radius: 5px;
-    background: #fd6e0a;
+    background: orangered;
     border: 0;
     color: white;
     font-size: 20px;
@@ -18,6 +18,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 .nav-title{
     color: #181818;
@@ -35,4 +36,19 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+.header{
+    background-color: #FFF8F3;
+}
+.banar{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+header{
+    background-color: #FFF8F3;
+    
+}
+.banar .profile-pic{
+    width: 500px;
 }
